Calculating power requirement

--- a/app/Resources/views/fishing-boat/calculate-power-requirements.html.twig
+++ b/app/Resources/views/fishing-boat/calculate-power-requirements.html.twig
@@ -3,12 +3,13 @@
 {% block body %}
     <div class="container-fluid">
 
-        <h1>Calculate Boat Power Requirements</h1>
+        <h2>Sony ATV Test - Jonathan Hamler</h2>
 
         <div class="row">
 
             <div class="col-md-5">
                 {{ form_start(form) }}
+                <hr/>
                 {{ form_widget(form) }}
                 {{ form_end(form) }}
             </div>
